# ChangeLog for media-plugins/xmms-blursk
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-blursk/Attic/ChangeLog,v 1.7 2004/04/20 17:49:00 eradicator Exp $

  20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-blursk-1.2.ebuild:
  Added IUSE.

  14 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-blursk-1.3.ebuild:
  Stable x86.

*xmms-blursk-1.3 (04 Nov 2002)

  04 Nov 2002; Seemant Kulleen <seemant@gentoo.org> xmms-blursk-1.3.ebuild
  files/digest-xmms-blursk-1.3 :

  Version bump thanks to: autobot@midsouth.rr.com (AutoBot) in bug #10080.

*xmms-blursk-1.2 (18 Jun 2002)
  
  25 Oct 2002; Calum Selkirk <cselkirk@gentoo.org> xmms-blursk-1.2.ebuild :

  Added ppc to KEYWORDS.

  30 Aug 2002; Seemant Kulleen <seemant@gentoo.org> * :

  Relocated to media-plugins
  
  18 Jun 2002; George Shapovalov <george@gentoo.org> all :
  
  First submission
  Ebuild submitted by Dan Naumov <jago@telefragged.com>