@@ -1,6 +1,6 @@
-MD5 7d4b84ae067e6ae45b54da258c4e7463 xmms-blursk-1.2.ebuild 709
-MD5 8c933307be2e20eb0951c7790badc296 ChangeLog 1012
+MD5 7e1568c422b3b2f3184f7758b6f174e3 ChangeLog 1135
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
-MD5 da81f46acd293845e856ab8a90704539 xmms-blursk-1.3.ebuild 675
+MD5 7f2de001162ee29c301251b10f4931f7 xmms-blursk-1.2.ebuild 708
+MD5 84a4b6caba05bf4c91b81daab8c4a64c xmms-blursk-1.3.ebuild 762
 MD5 faeb365039a4aa0bec6eff790a151ef0 files/digest-xmms-blursk-1.2 62
 MD5 f3980d654014eb4bde2b8a5a79c25871 files/digest-xmms-blursk-1.3 62
