@@ -1,8 +1,10 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-blursk/Attic/xmms-blursk-1.3.ebuild,v 1.3 2004/04/14 09:53:55 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-blursk/Attic/xmms-blursk-1.3.ebuild,v 1.4 2004/06/18 04:35:54 eradicator Exp $
 
 IUSE=""
+
+inherit gnuconfig
 
 MY_P=Blursk-${PV}
 S=${WORKDIR}/${MY_P}
@@ -15,7 +17,12 @@ DEPEND="media-sound/xmms"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="x86 ~ppc"
+KEYWORDS="x86 ~ppc ~amd64"
+
+src_unpack() {
+	unpack ${A}
+	use amd64 && gnuconfig_update
+}
 
 src_install () {
 	make DESTDIR=${D} install || die "install failed"
