@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/xmms-blursk
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-blursk/Attic/ChangeLog,v 1.7 2004/04/20 17:49:00 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-blursk/Attic/ChangeLog,v 1.8 2004/06/18 04:35:54 eradicator Exp $
+
+  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  xmms-blursk-1.3.ebuild:
+  gnuconfig update for ~amd64 addition.
 
   20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
   xmms-blursk-1.2.ebuild:
